Add PiggyFactions extension and abilities event system

--- a/plugin.yml
+++ b/plugin.yml
@@ -5,9 +5,10 @@ main: PrismArea\Loader
 authors:
   - Zwuiix
 depend:
-  - EasyEdit
-softdepend:
-  - PrismAPI
+  - EasyEdit # Required for area selection
+  - PrismAPI # Required for Prism integration
+support:
+  - PiggyFactions
 
 permissions:
   prism.area.*:
